# cxx-hw5

./: CMakeLists.txt
include/: car.hpp  lorry.hpp  sedan.hpp
src/: car.cpp  lorry.cpp  main.cpp  sedan.cpp
